# plex-playlist-manager

./: .gitignore  Dockerfile  README.md  __init__.py  config.toml  data_file.json  ppm.db  pyproject.toml  requirements.txt  response.json
.github/workflows/: docker-publish.yml
app/: __init__.py  config_handler.py  radarr.py  sonarr.py  spotiplexfunctions.py  syncer.py
app/templates/: base.html.j2  index.html.j2  settings.html.j2
libs/: lidarr.py  plex.py  radarr.py  sonarr.py  trakt.py
plex-playlist-manager/: __init__.py  config_handler.py  plex.py  radarr.py  sonarr.py  spotiplexfunctions.py  syncer.py
plex-playlist-manager/modules/: spotiplex.py
plex-playlist-manager/ppm_modules/: confighandler.py  plex.py  spotiplex.py
plex-playlist-manager/templates/: base.html.j2  index.html.j2  settings.html.j2  syncing.html.j2
plexplaylistmanager/: __init__.py  ppm.py  routes.py
plexplaylistmanager/modules/confighandler/: main.py
plexplaylistmanager/modules/lidarr/: main.py
plexplaylistmanager/modules/plex/: main.py
plexplaylistmanager/modules/radarr/: main.py
plexplaylistmanager/modules/sonarr/: main.py
plexplaylistmanager/modules/spotify/: main.py  spotiplex.py
plexplaylistmanager/ppm_modules/: confighandler.py  lidarr.py  plex.py  plextest.py  ppm.py  radarr.py  sonarr.py
plexplaylistmanager/templates/: base.html.j2  index.html.j2  preferences.html.j2  settings.html.j2  syncing.html.j2
ppm/: __init__.py  forms.py  main.py  routes.py
ppm/modules/plex/: main.py
ppm/templates/: about.html.j2  base.html.j2  music.html.j2  setup.html.j2
(+3 files in other folders)
