[tool.poetry]
name = "ppm"
version = "0.1.0"
description = ""
authors = ["0xChloe <chloe@catastrophesoftware.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.3"
WTForms = "^3.1.2"
bootstrap-flask = "^2.4.0"
flask-wtf = "^1.2.1"
spotipy = "^2.23.0"
schedule = "^1.2.1"
rtoml = "^0.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
